# BrainFuse-LLM

./: .gitignore  CITATION.cff  LICENSE  PUBLISHING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: static.yml
brainfuse/: __init__.py
brainfuse/models/: __init__.py  neuro_encoder.py  neuro_lora_moe.py
configs/: brainfuse_vicuna7b.yaml
docs/: baselines.md  dataset.md  reproducibility.md
scripts/: evaluate_brainfuse.py  prepare_nsd_metadata.py  run_synthetic_demo.py  train_brainfuse.py
tests/: test_core_modules.py
